--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@supabase/ssr": "^0.5.2",
     "@tanstack/react-table": "^8.20.5",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
@@ -34,6 +35,7 @@
     "jotai": "^2.10.3",
     "lucide-react": "^0.460.0",
     "next": "14.2.16",
+    "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.3",
     "react": "^18",
     "react-day-picker": "^8.10.1",
@@ -43,7 +45,8 @@
     "table": "github:tanstack/react-table",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^1.1.1"
+    "vaul": "^1.1.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
